<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/menu_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_name_1"/>

        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_name_2"/>

        <item
            android:id="@+id/menu_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_name_3"/>

        <item
            android:icon="@drawable/ic_noti"
            android:id="@+id/menu_notice"
            android:title="@string/menu_name_4"/>


        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_name_5"/>


</menu>
